Add argLine to surefire and set file.encoding as was done on m-junit-plugin